--- a/CIGAI/index.html
+++ b/CIGAI/index.html
@@ -917,7 +917,7 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
     <div class="row content" data-aos="fade-up" style="text-align: center;">
       <!-- Image 1 -->
       <div class="col-lg-3 col-md-6 mb-4">
-        <img src="static/img/picture_a.jpg" class="img-fluid" alt="Journal Cover 1" />
+        <img src="static/img/Picture_a.jpg" class="img-fluid" alt="Journal Cover 1" />
         <a style="color: darkblue;" href="https://www.sciencedirect.com/journal/supply-chain-analytics/">a. Supply Chain Analytics (Elsevier, Scopus Indexed)</a>
       </div>
       <!-- Image 2 -->
@@ -932,12 +932,12 @@ DBLP, EI Compendex, INSPEC, Japanese Science and Technology Agency (JST), Norweg
       </div>
       <!-- Image 4 -->
       <div class="col-lg-3 col-md-6 mb-4">
-        <img src="static/img/Picture_d.jpeg" class="img-fluid" alt="Journal Cover 4" />
+        <img src="static/img/picture_d.jpeg" class="img-fluid" alt="Journal Cover 4" />
         <a style="color: darkblue;" href="https://tehnickiglasnik.unin.hr/">Technical Journal (TG – TJ) (Scopus and WoS)</a>
       </div>
       <!-- Image 5 -->
       <div class="col-lg-3 col-md-6 mb-4">
-        <img src="static/img/picture_e.jpg" class="img-fluid" alt="Journal Cover 5" />
+        <img src="static/img/Picture_e.jpg" class="img-fluid" alt="Journal Cover 5" />
         <a style="color: darkblue;" href="https://ojs.wiserpub.com/index.php/CM/">Contemporary Mathematics (Scopus and WoS)
 ISSN: 2705-1064 (Print) 2705-1056 (Online)
 </a>
